fix word break in pkgbox

--- a/htdocs/wp-content/themes/aardvark-child/style.css
+++ b/htdocs/wp-content/themes/aardvark-child/style.css
@@ -536,6 +536,7 @@ button.forge-oauth span {
 
 .pkgbox-description {
   line-height: normal;
+  word-break: break-word;
 }
 
 .pkgbox-footer {
